<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllEntrySubmit"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_chevron_left_24" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/all_entry"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/prem"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:drawableRight="@drawable/ic_add"
            android:paddingRight="10dp"
            android:paddingLeft="8dp"
            android:background="#33D3D3D3"
            android:gravity="center|left"
            android:fontFamily="@font/google_sans_regular"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/part1"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:drawableRight="@drawable/ic_add"
            android:paddingRight="10dp"
            android:paddingLeft="8dp"
            android:background="#33D3D3D3"
            android:gravity="center|left"
            android:fontFamily="@font/google_sans_regular"
            />
        <TextView
            android:id="@+id/textHelp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/part2"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:drawableRight="@drawable/ic_add"
            android:paddingRight="10dp"
            android:paddingLeft="8dp"
            android:background="#33D3D3D3"
            android:gravity="center|left"
            android:fontFamily="@font/google_sans_regular"
            />
        <TextView
            android:id="@+id/textPrivacy"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/part3"
            android:textSize="14dp"
            android:fontFamily="@font/google_sans_regular"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:drawableRight="@drawable/ic_add"
            android:paddingRight="10dp"
            android:paddingLeft="8dp"
            android:background="#33D3D3D3"
            android:gravity="center|left"
            />
        <TextView
            android:id="@+id/textFeedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/part4"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:drawableRight="@drawable/ic_add"
            android:paddingRight="10dp"
            android:paddingLeft="8dp"
            android:background="#33D3D3D3"
            android:gravity="center|left"
            android:fontFamily="@font/google_sans_regular"
            />

    </LinearLayout>
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="10dp"
        android:fontFamily="@font/google_sans_bold"
        android:onClick="buttonClicked"
        />
    <Button
        android:id="@+id/buttonAnother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/another"
        android:layout_margin="10dp"
        android:fontFamily="@font/google_sans_bold"
        android:onClick="buttonClicked"/>

</LinearLayout>