<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/oranges"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/google_sans_bold"
        android:text="@string/want"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:drawablePadding="15dp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/google_sans_regular"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        >
        <Button
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/buttonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>