<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_chevron_left_24" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/ecologytool"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/title_language"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>\
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/google_sans_bold"
        android:padding="10dp"
        android:text="@string/goodmorning"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/google_sans_bold"
        android:padding="10dp"
        android:text="@string/select_please"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:layout_margin="10dp"
        android:fontFamily="@font/google_sans_bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

</LinearLayout>