<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreliminaryData"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_chevron_left_24" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/ecologytool"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/prem"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/selectdistrict"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_bg"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >
                <Spinner
                    android:id="@+id/districtNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:spinnerMode="dialog"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@color/white"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/selectWard"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_bg"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >
                <Spinner
                    android:id="@+id/wardno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:spinnerMode="dialog"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@color/white"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/selectHamlet"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_bg"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >
                <Spinner
                    android:id="@+id/hamletNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:spinnerMode="dialog"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/houseno"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/houseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/houseno_hint"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/selecttrap"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_bg"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                >
                <Spinner
                    android:id="@+id/traptype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:spinnerMode="dialog"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@color/white"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/name_officer"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />
            <EditText
                android:id="@+id/nameofficer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/name_officerhint"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:backgroundTint="@color/green"
                android:drawableEnd="@drawable/idate"
                android:drawableRight="@drawable/idate"
                android:text="@string/pickdate"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/currenttime"
                    android:textColor="@color/green"
                    android:textSize="14sp"
                    android:layout_marginRight="5dp"

                    />
                <TextView
                    android:id="@+id/selectedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="18/07/2022"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proceeds"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/google_sans_bold"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:onClick="clickedButton"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</LinearLayout>